# ai-budget-analyst

./: .gitignore  CLAUDE.md  LICENSE  README.md  RESUME.md  pyproject.toml  requirements.txt
budget_analyst/: __init__.py  __main__.py  agent.py  analysis.py  cli.py  dashboard.py  deck.py  ingest.py  report.py  schema_mapper.py
data/: make_sample.py  sample_prns_capital_funds.csv  sample_prns_operating_budget.csv
data/real/: README.md  opengov_prns_actuals_snapshot.csv  park_condition_assessment.csv
examples/: budget_analysis.xlsx  budget_memo.md
examples/capital/: budget_analysis.xlsx  budget_briefing.pptx  budget_memo.md  schema_mapping.json
examples/operating/: budget_analysis.xlsx  budget_briefing.pptx  budget_memo.md  schema_mapping.json
examples/san_jose_parks/: park_conditions_memo.md  park_priorities.xlsx
scripts/: fetch_sanjose.py  park_conditions.py
tests/: test_capital.py  test_messy_excel.py  test_outputs.py  test_pipeline.py
