[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-budget-analyst"
version = "0.2.0"
description = "Automated budget analysis for any tabular dataset: deterministic pandas math, live dashboard, Excel/PowerPoint reporting, Claude narration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Joshua Gonzalez", email = "jroccogonzalez@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "tabulate>=0.9",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=7"]

[project.scripts]
budget-analyst = "budget_analyst.cli:main"

[tool.setuptools]
packages = ["budget_analyst"]
